Css changes to distinguish T/F

--- a/client/src/Components/TruthTableGenerator.css
+++ b/client/src/Components/TruthTableGenerator.css
@@ -184,3 +184,12 @@
 .alert {
     margin-top: 20px;
 }
+
+.true {
+    color: green; /* Change color for true values */
+}
+
+.false {
+    color: red; /* Change color for false values */
+}
+
