--- a/client/src/Components/TruthTableGenerator.css
+++ b/client/src/Components/TruthTableGenerator.css
@@ -31,6 +31,51 @@
     margin-bottom: 20px;
 }
 
+.test-container {
+   
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+}
+.predicateCoverage_button{
+
+ padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.combinationalCoverage_button{
+
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+}
+
+.activeCoverage_button{
+
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+}
+.tests{
+    color:red;
+}
+
+
 .generate-button,
 .save-button,
 .history-button {
@@ -43,11 +88,13 @@
     transition: background-color 0.3s;
 }
 
-.generate-button:hover,
-.save-button:hover,
-.history-button:hover {
-    background-color: #0056b3;
-}
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px; /* Adjust the margin as needed */
+  }
+  
+
 
 .error {
     color: #dc3545;
@@ -59,9 +106,21 @@
     margin-top:10px;
 }
 
-.truth-table {
-    margin-bottom: 20px;
+.truth-table, .test-table {
+    flex: 1; /* Use flexbox to allow both tables to grow and shrink */
+    margin: 0 10px; /* Adjust margin for spacing */
 }
+
+.tables-container {
+    display: flex;
+    flex-wrap: wrap; /* Allow tables to wrap to the next line if there isn't enough space */
+    justify-content: center; /* Center-align tables horizontally */
+}
+
+.containerTable {
+    margin-top: 20px; /* Add some space between the buttons and the tables */
+}
+
 
 .history-container {
     background-color: #fff;
@@ -107,7 +166,7 @@
     margin-bottom: 20px;
 }
 
-/* New CSS for Truth Table */
+
 .truth-table table {
     width: 100%;
     border-collapse: collapse;
@@ -126,6 +185,9 @@
     background-color: #007bff;
     color: #fff;
 }
+
+
+
 
 .truth-table tbody tr:nth-child(even) {
     background-color: #f2f2f2;
@@ -229,5 +291,16 @@
 .gacc-table p {
     margin: 5px 0;
 }
+
+.logout {
+    color: #dc3545;
+    background-color: white;
+    position: absolute;
+    right: 15px;
+    top: 11px;
+}
+/* Add this CSS to your TruthTableGenerator.css file or wherever you manage your styles */
+
+
 
 
